# Arnoldi

./: .gitignore
complex/: .gitignore  Cargo.toml  README.md
complex/src/: arnoldi.rs  iram.rs  lib.rs  main.rs  report.rs
complex/src/linalg/: mod.rs  ops.rs
simple/: README.md
simple/src/: arnoldi.rs  config.rs  error.rs  iram.rs  lib.rs  main.rs  memory.rs  operator.rs  selection.rs
simple/src/linalg/: ops.rs  small.rs
